crates/qreview/src/snapshots/qreview__export__tests__the_export_of_a_change_is_pinned.snap
---
source: crates/qreview/src/export.rs
expression: stable
---
## Review: <repo>@main, commit <hash>

I reviewed this commit and left the comments below. Please address them.
Each comment is about the lines marked `>`; the lines around them are
context only.

Change: net: fix the retry loop
Patch set 1 · 3 comments

1. The change as a whole

   The whole change needs a test.

2. `src/net.blk:3`

   ```c
     1 | int connect_once(int fd)
     2 | {
   > 3 |     for (;;) {
     4 |         read(fd);
     5 |     }
   ```

   This loop never ends when the socket closes.

3. `src/net.blk:3`, on `for (;;)`

   ```c
     1 | int connect_once(int fd)
     2 | {
   > 3 |     for (;;) {
     4 |         read(fd);
     5 |     }
   ```

   Only the head of the loop.
